cargo-features = ["resolver"]

[workspace]
members = [
	"modules/*",
	"modules/currencies/runtime-api",
	"modules/evm-utility/macro",
	"primitives",

	"runtime/common",
	"runtime/mandala",
	"runtime/karura",
	"runtime/acala",
	"runtime/integration-tests",

	"orml/asset-registry",
	"orml/auction",
	"orml/authority",
	"orml/benchmarking",
	"orml/currencies",
	"orml/gradually-update",
	"orml/nft",
	"orml/oracle",
	"orml/parameters",
	"orml/payments",
	"orml/rewards",
	"orml/tokens",
	"orml/tokens/runtime-api",
	"orml/traits",
	"orml/unknown-tokens",
	"orml/utilities",
	"orml/vesting",
	"orml/xcm-support",
	"orml/xcm",
	"orml/xtokens",
 	"orml/oracle/runtime-api",

	"ecosystem-modules/stable-asset/lib/stable-asset",
	"evm-tests/jsontests",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# Acala runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
insta = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
similar = { opt-level = 3 }
smallvec = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
zeroize = { opt-level = 3 }

[workspace.dependencies]
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1" }
rand_chacha = { version = "0.3.1", default-features = false }
env_logger = { version = "0.10.0" }
smallvec = { version = "1.4.1" }
ripemd = { version = "0.1.3", default-features = false }
rlp = { version = "0.5.2", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
tiny-keccak = { version = "2.0" }
num = { version = "0.4", default-features = false }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
ethereum-types = { version = "0.14.0", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
quote = { version = "1.0.20" }
syn = { version = "1.0.98" }
proc-macro2 = { version = "1.0.40" }
derive_more = { version = "0.99" }
bstringify = { version = "0.1.2" }
enumflags2 = { version = "0.7.7" }
paste = { version = "1.0" }
static_assertions = { version = "1.1.0" }
ethabi = { version = "18.0.0", default-features = false }
insta = { version = "1.31.0", features = ["json"] }

# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# ORML & Acala (wasm)
wasm-bencher = { git = "https://github.com/open-web3-stack/wasm-bencher", branch = "polkadot-stable2407", default-features = false }
orml-auction = { path = "orml/auction", default-features = false }
orml-authority = { path = "orml/authority", default-features = false }
orml-benchmarking = { path = "orml/benchmarking", default-features = false }
orml-currencies = { path = "orml/currencies", default-features = false }
orml-nft = { path = "orml/nft", default-features = false }
orml-oracle = { path = "orml/oracle", default-features = false }
orml-oracle-runtime-api = { path = "orml/oracle/runtime-api", default-features = false }
orml-parameters = { path = "orml/parameters", default-features = false }
orml-payments = { path = "orml/payments", default-features = false }
orml-rewards = { path = "orml/rewards", default-features = false }
orml-tokens = { path = "orml/tokens", default-features = false }
orml-tokens-runtime-api = { path = "orml/tokens/runtime-api", default-features = false }
orml-traits = { path = "orml/traits", default-features = false }
orml-unknown-tokens = { path = "orml/unknown-tokens", default-features = false }
orml-utilities = { path = "orml/utilities", default-features = false }
orml-vesting = { path = "orml/vesting", default-features = false }
orml-xcm = { path = "orml/xcm", default-features = false }
orml-xcm-support = { path = "orml/xcm-support", default-features = false }
orml-xtokens = { path = "orml/xtokens", default-features = false }
primitives = { package = "acala-primitives", path = "primitives", default-features = false }
runtime-common = { path = "runtime/common", default-features = false }
mandala-runtime = { path = "runtime/mandala", default-features = false }
karura-runtime = { path = "runtime/karura", default-features = false }
acala-runtime = { path = "runtime/acala", default-features = false }
module-aggregated-dex = { path = "modules/aggregated-dex", default-features = false }
module-asset-registry = { path = "modules/asset-registry", default-features = false }
module-auction-manager = { path = "modules/auction-manager", default-features = false }
module-cdp-engine = { path = "modules/cdp-engine", default-features = false }
module-cdp-treasury = { path = "modules/cdp-treasury", default-features = false }
module-collator-selection = { path = "modules/collator-selection", default-features = false }
module-currencies = { path = "modules/currencies", default-features = false }
module-currencies-runtime-api = { path = "modules/currencies/runtime-api", default-features = false }
module-dex = { path = "modules/dex", default-features = false }
module-dex-oracle = { path = "modules/dex-oracle", default-features = false }
module-earning = { path = "modules/earning", default-features = false }
module-emergency-shutdown = { path = "modules/emergency-shutdown", default-features = false }
module-evm = { path = "modules/evm", default-features = false }
module-evm-accounts = { path = "modules/evm-accounts", default-features = false }
module-evm-bridge = { path = "modules/evm-bridge", default-features = false }
module-evm-rpc-runtime-api = { path = "modules/evm/rpc/runtime-api", default-features = false }
module-evm-utility = { path = "modules/evm-utility", default-features = false }
module-homa = { path = "modules/homa", default-features = false }
module-homa-validator-list = { path = "modules/homa-validator-list", default-features = false }
module-honzon = { path = "modules/honzon", default-features = false }
module-honzon-bridge = { path = "modules/honzon-bridge", default-features = false }
module-idle-scheduler = { path = "modules/idle-scheduler", default-features = false }
module-incentives = { path = "modules/incentives", default-features = false }
module-liquid-crowdloan = { path = "modules/liquid-crowdloan", default-features = false }
module-loans = { path = "modules/loans", default-features = false }
module-nft = { path = "modules/nft", default-features = false }
module-xnft = { path = "modules/xnft", default-features = false }
module-nominees-election = { path = "modules/nominees-election", default-features = false }
module-prices = { path = "modules/prices", default-features = false }
module-relaychain = { path = "modules/relaychain", default-features = false }
module-session-manager = { path = "modules/session-manager", default-features = false }
module-support = { path = "modules/support", default-features = false }
module-transaction-pause = { path = "modules/transaction-pause", default-features = false }
module-transaction-payment = { path = "modules/transaction-payment", default-features = false }
module-xcm-interface = { path = "modules/xcm-interface", default-features = false }
nutsfinance-stable-asset = { version = "0.1.0", path = "ecosystem-modules/stable-asset/lib/stable-asset", default-features = false}

# ORML & Acala (client)
module-evm-utility-macro = { path = "modules/evm-utility/macro" }
orml-build-script-utils = { path = "orml/build-script-utils" }

# polkadot-sdk (wasm)
cumulus-pallet-aura-ext = { version = "0.16.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.16.0", default-features = false }
cumulus-pallet-xcm = { version = "0.16.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.16.0", default-features = false }
cumulus-primitives-core = { version = "0.15.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.15.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.15.1", default-features = false }
cumulus-primitives-utility = { version = "0.16.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "0.15.0", default-features = false }
frame-benchmarking = { version = "37.0.0", default-features = false }
frame-executive = { version = "37.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.5.0", default-features = false }
frame-support = { version = "37.0.0", default-features = false }
frame-system = { version = "37.1.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.43.0", default-features = false }
pallet-aura = { version = "36.0.0", default-features = false }
pallet-authority-discovery = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "37.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-bounties = { version = "36.0.0", default-features = false }
pallet-collective = { version = "37.0.0", default-features = false }
pallet-democracy = { version = "37.0.0", default-features = false }
pallet-elections-phragmen = { version = "38.0.0", default-features = false }
pallet-indices = { version = "37.0.0", default-features = false }
pallet-membership = { version = "37.0.0", default-features = false }
pallet-message-queue = { version = "40.0.0", default-features = false }
pallet-multisig = { version = "37.0.0", default-features = false }
pallet-preimage = { version = "37.0.0", default-features = false }
pallet-proxy = { version = "37.0.0", default-features = false }
pallet-recovery = { version = "37.0.0", default-features = false }
pallet-root-testing = { version = "13.0.0", default-features = false }
pallet-scheduler = { version = "38.0.0", default-features = false }
pallet-session = { version = "37.0.0", default-features = false }
pallet-state-trie-migration = { version = "39.0.0", default-features = false }
pallet-sudo = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "36.0.0", default-features = false }
pallet-tips = { version = "36.0.0", default-features = false }
pallet-transaction-payment = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "37.0.0", default-features = false }
pallet-treasury = { version = "36.0.0", default-features = false }
pallet-utility = { version = "37.0.0", default-features = false }
pallet-xcm = { version = "16.0.0", default-features = false }
pallet-xcm-benchmarks = { version = "16.0.0", default-features = false }
parachain-info = { version = "0.16.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "17.0.0", default-features = false }
polkadot-core-primitives = { version = "15.0.0", default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "15.0.0", default-features = false }
polkadot-runtime-common = { version = "16.0.0", default-features = false }
polkadot-runtime-parachains = { version = "16.0.1", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus = { version = "0.40.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-slots = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-runtime-interface = { version = "28.0.0", default-features = false }
sp-session = { version = "35.0.0", default-features = false }
sp-staking = { version = "34.0.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-tracing = { version = "17.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-wasm-interface = { version = "21.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }
xcm = { version = "14.1.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "16.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "16.0.0", package = "staging-xcm-executor", default-features = false }

# polkadot-sdk (client)
substrate-wasm-builder = { version = "24.0.0", features = ["metadata-hash"] }
xcm-simulator = { version = "16.0.0" }
