[package]
name = "acala-inspect"
version = "2.22.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0" }
clap = { version = "4.0.9", features = ["derive"] }
derive_more = "0.99"
log = "0.4.17"
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
