[package]
name = "acala-inspect"
version = "2.22.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
log = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
