[package]
name = "acala"
version = "1.0.0"
authors = ["Acala Developers"]
edition = "2018"
default-run = "acala"

[[bin]]
name = "acala"
path = "src/main.rs"

[dependencies]
futures = "0.3.15"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["jemalloc-global"] }
acala-cli = { path = "cli" }
acala-service = { path = "service" }

[features]
default = []
runtime-benchmarks = [
	"acala-cli/runtime-benchmarks",
]
with-mandala-runtime = [
	"acala-service/with-mandala-runtime",
	"acala-cli/with-mandala-runtime",
]
with-karura-runtime = [
	"acala-service/with-karura-runtime",
	"acala-cli/with-karura-runtime",
]
with-acala-runtime = [
	"acala-service/with-acala-runtime",
	"acala-cli/with-acala-runtime",
]
with-all-runtime = [
	"acala-service/with-all-runtime",
	"acala-cli/with-all-runtime",
]
