[package]
name = "acala-primitives"
version = "2.22.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
log = { version = "0.4.17", default-features = false }
hex-literal = "0.4.1"
bstringify = "0.1.2"
serde = { version = "1.0.145", default-features = false, features = ["alloc", "derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
num_enum = { version = "0.5.1", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.7.7", features = ["serde"] }
paste = "1.0"

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
frame-support = { workspace = true }
orml-traits = { workspace = true }
module-evm-utility = { workspace = true }
module-evm-utility-macro = { workspace = true }
nutsfinance-stable-asset = { workspace = true }

[dev-dependencies]
serde_json = { version = "1.0.85" }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"num_enum/std",
	"scale-info/std",
	"enumflags2/serde",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-api/std",

	"frame-support/std",

	"orml-traits/std",
	"module-evm-utility/std",
	"nutsfinance-stable-asset/std",
]
evm-tests = []
try-runtime = []
