[package]
name = "acala-rpc"
version = "2.22.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
futures = "0.3.28"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
codec = { package = "parity-scale-codec", version = "3.4.0" }
primitives = { package = "acala-primitives", path = "../primitives" }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sc-transaction-pool-api = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
runtime-common = { workspace = true, features = ["std"] }
