[package]
name = "acala-rpc"
version = "2.23.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
parity-scale-codec = { workspace = true, features = ["std"] }
primitives = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sc-transaction-pool-api = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-consensus-manual-seal = { workspace = true }

runtime-common = { workspace = true, features = ["std"] }
