[package]
name = "acala-runtime"
version = "0.3.4"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "2.0.0-alpha.3", default-features = false }
frame-support = { version = "2.0.0-alpha.3", default-features = false }
frame-system-rpc-runtime-api = { version = "2.0.0-alpha.3", default-features = false }
pallet-babe = { version = "2.0.0-alpha.3", default-features = false }
pallet-balances = { version = "2.0.0-alpha.3", default-features = false }
pallet-collective = { version = "2.0.0-alpha.3", default-features = false }
pallet-grandpa = { version = "2.0.0-alpha.3", default-features = false }
pallet-indices = { version = "2.0.0-alpha.3", default-features = false }
pallet-membership = { version = "2.0.0-alpha.3", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.3", default-features = false }
pallet-recovery = { version = "2.0.0-alpha.3", default-features = false }
pallet-session = { version = "2.0.0-alpha.3", default-features = false }
pallet-staking = { version = "2.0.0-alpha.3", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0-alpha.3", default-features = false }
pallet-sudo = { version = "2.0.0-alpha.3", default-features = false }
pallet-timestamp = { version = "2.0.0-alpha.3", default-features = false }
pallet-transaction-payment = { version = "2.0.0-alpha.3", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.3", default-features = false }
pallet-treasury = { version = "2.0.0-alpha.3", default-features = false }
pallet-utility = { version = "2.0.0-alpha.3", default-features = false }
sp-api = { version = "2.0.0-alpha.3", default-features = false }
sp-block-builder = { version = "2.0.0-alpha.3", default-features = false }
sp-consensus-babe = { version = "0.8.0-alpha.3", default-features = false }
sp-core = { version = "2.0.0-alpha.3", default-features = false }
sp-inherents = { version = "2.0.0-alpha.3", default-features = false }
sp-io = { version = "2.0.0-alpha.3", default-features = false }
sp-offchain = { version = "2.0.0-alpha.3", default-features = false }
sp-runtime = { version = "2.0.0-alpha.3", default-features = false }
sp-session = { version = "2.0.0-alpha.3", default-features = false }
sp-staking = { version = "2.0.0-alpha.3", default-features = false }
sp-std = { version = "2.0.0-alpha.3", default-features = false }
sp-transaction-pool = { version = "2.0.0-alpha.3", default-features = false }
sp-version = { version = "2.0.0-alpha.3", default-features = false }
system = { package = "frame-system", version = "2.0.0-alpha.3", default-features = false }

orml-auction = { path = "../orml/auction", default-features = false }
orml-currencies = { path = "../orml/currencies", default-features = false }
orml-oracle = { path = "../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../orml/oracle/rpc/runtime-api", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-traits = { path = "../orml/traits", default-features = false }

module-accounts = { path = "../modules/accounts", default-features = false }
module-airdrop = { path = "../modules/airdrop", default-features = false }
module-auction-manager = { path = "../modules/auction_manager", default-features = false }
module-cdp-engine = { path = "../modules/cdp_engine", default-features = false }
module-cdp-treasury = { path = "../modules/cdp_treasury", default-features = false }
module-dex = { path = "../modules/dex", default-features = false }
module-dex-rpc-runtime-api = { path = "../modules/dex/rpc/runtime-api", default-features = false }
module-emergency-shutdown = { path = "../modules/emergency_shutdown", default-features = false }
module-honzon = { path = "../modules/honzon", default-features = false }
module-loans = { path = "../modules/loans", default-features = false }
module-prices = { path = "../modules/prices", default-features = false }
module-primitives = { path = "../modules/primitives", default-features = false }
module-support = { path = "../modules/support", default-features = false }
module-homa = { path = "../modules/homa", default-features = false }
module-homa-council = { path = "../modules/homa_council", default-features = false }
module-staking-pool = { path = "../modules/staking_pool", default-features = false }
module-polkadot-bridge = { path = "../modules/polkadot_bridge", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.5" }

[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-recovery/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"orml-currencies/std",
	"orml-oracle-rpc-runtime-api/std",
	"orml-oracle/std",
	"orml-tokens/std",
	"orml-traits/std",

	"module-accounts/std",
	"module-airdrop/std",
	"module-auction-manager/std",
	"module-cdp-engine/std",
	"module-cdp-treasury/std",
	"module-dex/std",
	"module-dex-rpc-runtime-api/std",
	"module-emergency-shutdown/std",
	"module-honzon/std",
	"module-loans/std",
	"module-prices/std",
	"module-primitives/std",
	"module-support/std",
	"module-homa/std",
	"module-homa-council/std",
	"module-staking-pool/std",
	"module-polkadot-bridge/std",
]
